Finished with all bubblesort runs and my java evaluations